transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
spec:
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: transmission
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
        searches:
          - svc.cluster.local
          - cluster.local
        options:
          - name: ndots
            value: "5"
      hostNetwork: false
      containers:
        - name: transmission
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
            privileged: true
          image: "haugene/transmission-openvpn:latest"
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /dev/net/tun
              name: dev-net-tun
              readOnly: true
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
          startupProbe:
            httpGet:
              path: /transmission/
              port: 9091
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /transmission/
              port: 9091
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /transmission/
              port: 9091
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: dev-net-tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: ""
        - name: data
          nfs:
            server: 10.10.0.31
            path: /mnt/ext1/k3s-data/transmission
        - name: config
          nfs:
            server: 10.10.0.31
            path: /mnt/ext1/k3s-config/
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-service
spec:
  selector:
    app: transmission
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9091
  type: LoadBalancer
