transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-transmission
  namespace: media
spec:
  rules:
  - host: transmission.local
    http:
      paths:
      - path: "/transmission"
        pathType: Prefix
        backend:
          service:
            name: transmission-service
            port:
              number: 8080
  ingressClassName: nginx
